[package]
name = "pdflens-mcp"
version = "0.2.0"
edition = "2024"
description = "An MCP server for reading PDFs, coded by human, designed for AI."
readme = "Readme.md"
repository = "https://github.com/m13253/pdflens-mcp"
license = "Apache-2.0"
keywords = ["MCP", "LLM", "PDF", "AI", "large-language-model"]
categories = ["text-processing", "multimedia"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
eyre = "0.6.12"
hayro = "0.4.0"
pdf-extract = "0.10.0"
percent-encoding = "2.3.2"
regex = "1.12.2"
rmcp = { version = "0.10.0", features = ["transport-io"] }
schemars = { version = "1.1.0", features = ["preserve_order"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
