[package]
name = "pdflens-mcp"
version = "0.3.3"
edition = "2024"
description = "An MCP server for reading PDFs, coded by human, designed for AI."
readme = "Readme.md"
repository = "https://github.com/m13253/pdflens-mcp"
license = "Apache-2.0"
keywords = ["MCP", "LLM", "PDF", "AI", "large-language-model"]
categories = ["text-processing", "multimedia"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
eyre = "0.6.12"
hayro = "0.5.0"
indexmap = "2.13.0"
pdf-extract = "0.11.0"
rmcp = { version = "0.16.0", features = ["transport-io"] }
schemars = { version = "1.2.1", features = ["preserve_order"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"

[features]
enable_multi_images = []

[patch.'crates-io']
pdf-extract = { git = 'https://github.com/jrmuizel/pdf-extract.git', branch = 'hayro' }
